# FreeD_Cal_OSC

./: CMakeLists.txt  README.md
.github/workflows/: build-matrix.yml
FreeD/DataObjects/: FreeD1Packet.cs  FreeDAPacket.cs  FreeDPacket.cs
FreeD/Parser/: D1Parser.cs  DAParser.cs  Parser.cs
FreeD/Util/: FreeDUtils.cs
examples/: lut_0_16383_gain_0p3.csv  lut_0_16383_linear.csv  lut_0_4000_linear.csv  lut_10pts_0_16383_gain_0p3.csv  lut_lens_to_fov_0_16383_to_5_105_10pts.csv  surface_lens_focus_fov_0_16383_10x5.csv  surface_lens_focus_fov_0_16383_10x5_dev_pm2.csv  surface_lens_focus_fov_0_16383_10x5_huge_dev.csv  test.csv  test_new.csv  test_new_2.csv
src/: LensEncoderSimMain.cpp  Main.cpp
src/alglib-cpp/: manual.cpp.html
src/alglib-cpp/src/: alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  diffequations.h  fasttransforms.cpp  fasttransforms.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  kernels_avx2.cpp  kernels_avx2.h  kernels_fma.cpp  kernels_fma.h  kernels_sse2.cpp  kernels_sse2.h  linalg.cpp  linalg.h  minlp.cpp  minlp.h  optimization.h  solvers.cpp  solvers.h  specialfunctions.cpp  specialfunctions.h  statistics.cpp  statistics.h
src/alglib-cpp/tests/: test_i.cpp
